<resources>
    <string name="app_name">E-Aquarium</string>
    <string name="in">Masuk</string>
    <string name="register">Daftar</string>
    <string name="sudah">Sudah Punya Akun? Masuk!</string>
    <string name="belum">Belum Punya Akun? Daftar Sekarang!</string>
    <string name="email">Email/Telpon</string>
    <string name="password">Password</string>
    <string name="nama">Nama</string>
    <string name="telpon">Nomor Telpon</string>
    <string name="Diagnosa">Monitoring</string>
    <string name="data">History</string>
    <string name="Profile">Profile</string>
    <string name="about">Setting</string>
    <string name="out">Logout</string>
    <string name="daftar">Daftar</string>
    <string name="update">Update</string>
    <string name="profile">Menu Profile</string>
    <string name="tentang">Tentang Aplikasi</string>
    <string name="CopyRight">\u00A9 2011 androidsurya.blogspot.in</string>
</resources>