<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/mainTextDark"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:id="@+id/FormUpdate"
        app:cardCornerRadius="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/in"
                android:textColor="@color/mainTextDark"
                android:textSize="20sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingRight="10dp"
                    android:src="@drawable/ic_name"
                    android:paddingEnd="10dp" />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="false">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/UpdateName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTintMode="@color/mainColor"
                        android:hint="@string/nama"
                        android:inputType="text"
                        android:textSize="15sp"
                        tools:targetApi="lollipop" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingRight="10dp"
                    android:src="@drawable/ic_email"
                    android:paddingEnd="10dp" />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="false">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/UpdateEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTintMode="@color/mainColor"
                        android:hint="@string/email"
                        android:inputType="text"
                        android:textSize="15sp"
                        tools:targetApi="lollipop" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingRight="10dp"
                    android:src="@drawable/pass_ic"
                    android:paddingEnd="10dp" />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/UpdatePassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTintMode="@color/mainColor"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="15sp"
                        tools:targetApi="lollipop" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <Button
                android:onClick="BtnUpdateProfile"
                android:id="@+id/BtnProfile"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/mainTextDark"
                android:background="@drawable/m_button"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="@color/c_white"
                android:textSize="17sp" />
            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Copyright \u00A9 Tugas Akhir"
                    android:textSize="15dp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>