<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/mainTextDark"
    android:layout_height="match_parent"
    tools:context=".Features.Menu_Profile">
<LinearLayout
    android:layout_gravity="center"
    android:id="@+id/Profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="InvalidId"
    android:orientation="vertical">
    <TextView
        android:text="@string/profile"
        android:textSize="25dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="35dp"/>
    <androidx.cardview.widget.CardView
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/Buttom"
        app:cardCornerRadius="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutvoltage"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="53dp"
        android:background="@color/c_white">
        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center"
                android:background="@drawable/ic_name"
                android:layout_width="100dp"
                android:layout_height="100dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:text="Nama"
                    android:textStyle="normal"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="20dp"
                    android:layout_width="70dp"
                    android:layout_height="30dp"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:text=":"
                    android:textStyle="normal"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="20dp"
                    android:layout_width="10dp"
                    android:layout_height="30dp"/>
                <TextView
                    android:id="@+id/namaprofile"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="5dp"
                    android:text="Asep Trisna Setiawan"
                    android:textStyle="normal"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:text="Email"
                    android:textStyle="normal"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="20dp"
                    android:layout_width="70dp"
                    android:layout_height="30dp"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:text=":"
                    android:textStyle="normal"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="20dp"
                    android:layout_width="10dp"
                    android:layout_height="30dp"/>
                <TextView
                    android:id="@+id/emailprofile"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="5dp"
                    android:text="Asep.Iot@ubl.ac.id"
                    android:textStyle="normal"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>
            </LinearLayout>
            <Button
                android:onClick="BtnLogout"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/out"
                android:textColor="@color/white"
                android:background="@drawable/m_button"
                android:layout_width="300dp"
                android:layout_height="50dp"
                tools:ignore="OnClick" />
            <Button
                android:onClick="BtnUpdate"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/update"
                android:textColor="@color/white"
                android:background="@drawable/m_button"
                android:layout_width="300dp"
                android:layout_marginBottom="50dp"
                android:layout_height="50dp"
                tools:ignore="OnClick" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <TextView
        android:textColor="@color/white"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="Copyright \u00A9 Tugas Akhir"
        android:textSize="15dp" />
</LinearLayout>
</ScrollView>